--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,11 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+    //added
+    implementation 'com.indvd00m.ascii.render:ascii-render:2.2.0'
+    //added
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation ('org.springframework.boot:spring-boot-starter-test')
 }
 
 application {
