--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     //added ASCII
     implementation 'com.indvd00m.ascii.render:ascii-render:2.2.0'
 
+    //added
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
+
 }
 
 application {
