--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/acostoo/ZHAW-devops.git"
   },
-  "author": "Aleksandar",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/acostoo/ZHAW-devops/issues"
