--- a/DevOpsDocker/package.json
+++ b/DevOpsDocker/package.json
@@ -1,14 +1,15 @@
 {
-    "name": "docker_web_app",
-    "version": "1.0.0",
-    "description": "Node.js on Docker",
-    "author": "First Last
-    <first.last@example.com>",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js"
-    },
-    "dependencies": {
-        "express": "^4.16.1"
-    }
+  "name": "docker_web_app",
+  "version": "1.0.0",
+  "description": "Node.js on Docker",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "First Last <first.last@example.com>",
+  "dependencies": {
+    "express": "^4.16.1"
+    },    
+  "license": "ISC"
 }
